--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,6 @@
-# Sphinx documentation requirements
-sphinx>=7.0.0
-sphinx-rtd-theme>=2.0.0
-myst-parser>=2.0.0
-sphinx-copybutton>=0.5.0
-sphinx-tabs>=3.4.0
-sphinxext-opengraph>=0.9.0
-sphinx-design>=0.5.0
-linkify-it-py>=0.2.0
-
+sphinx>=4.0.0
+sphinx-rtd-theme>=1.0.0
+myst-parser>=0.18.0
+sphinxext-opengraph
+sphinx-copybutton
+sphinx-tabs
